修改github action，直接mdbook build

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,42 +19,42 @@ jobs:
 #        run: |
 #          chmod a+x scripts/update_toc_raw
 #          scripts/update_toc_raw
-      - name: Install mdbook
-        run: |
-          #mkdir bin
-          curl -sSL https://github.com/rust-lang/mdBook/releases/download/v0.4.19/mdbook-v0.4.19-x86_64-unknown-linux-gnu.tar.gz | tar -xz --directory=bin
-          #mkdir .cargo
-          #cp .cargo/*  /home/runner/.cargo/bin/
-          echo "$(pwd)/bin" >> $GITHUB_PATH
-      # - run: mdbook build && mdbook test # In case of custom book path: mdbook build path/to/mybook && mdbook test path/to/mybook
+#- name: Install mdbook
+#        run: |
+#          #mkdir bin
+#          curl -sSL https://github.com/rust-lang/mdBook/releases/download/v0.4.19/mdbook-v0.4.19-x86_64-unknown-linux-gnu.tar.gz | tar -xz --directory=bin
+#          #mkdir .cargo
+#          #cp .cargo/*  /home/runner/.cargo/bin/
+#          echo "$(pwd)/bin" >> $GITHUB_PATH
+#      # - run: mdbook build && mdbook test # In case of custom book path: mdbook build path/to/mybook && mdbook test path/to/mybook
       - uses: stefanzweifel/git-auto-commit-action@v4
         with:
           commit_message: Auto update markdown TOC
       # 预构建cargo install 相关crate
-      - name: cargo-install-mdbook-checklist
-        uses: actions-rs/install@v0.1.2
-        with:
-          crate: mdbook-checklist
-          version: 0.1.1
-          use-tool-cache: true # 打开这个，就只会在第一次进行构建
-      - name: cargo-install-mdbook-admonish
-        uses: actions-rs/install@v0.1.2
-        with:
-          crate: mdbook-admonish
-          version: 1.7.0
-          use-tool-cache: true # 打开这个，就只会在第一次进行构建
-      - name: cargo-install-mdbook-mermaid
-        uses: actions-rs/install@v0.1.2
-        with:
-          crate: mdbook-mermaid
-          version: 0.11.0
-          use-tool-cache: true # 打开这个，就只会在第一次进行构建
-      - name: cargo-install-mdbook-puml
-        uses: actions-rs/install@v0.1.2
-        with:
-          crate: mdbook-puml
-          version: 0.1.1
-          use-tool-cache: true # 打开这个，就只会在第一次进行构建
+      #- name: cargo-install-mdbook-checklist
+      #  uses: actions-rs/install@v0.1.2
+      #  with:
+      #    crate: mdbook-checklist
+      #    version: 0.1.1
+      #    use-tool-cache: true # 打开这个，就只会在第一次进行构建
+      #- name: cargo-install-mdbook-admonish
+      #  uses: actions-rs/install@v0.1.2
+      #  with:
+      #    crate: mdbook-admonish
+      #    version: 1.7.0
+      #    use-tool-cache: true # 打开这个，就只会在第一次进行构建
+      #- name: cargo-install-mdbook-mermaid
+      #  uses: actions-rs/install@v0.1.2
+      #  with:
+      #    crate: mdbook-mermaid
+      #    version: 0.11.0
+      #    use-tool-cache: true # 打开这个，就只会在第一次进行构建
+      #- name: cargo-install-mdbook-puml
+      #  uses: actions-rs/install@v0.1.2
+      #  with:
+      #    crate: mdbook-puml
+      #    version: 0.1.1
+      #    use-tool-cache: true # 打开这个，就只会在第一次进行构建
       #- name: add mdbook-checklist
       #  run: |
       #    cargo install mdbook-checklist
@@ -64,7 +64,8 @@ jobs:
       #    git add .cargo
       #    git commit -am'add cargo crate'
       - run: |
-          cp /home/runner/.cargo/bin/* $(pwd)/bin
+              #cp /home/runner/.cargo/bin/* $(pwd)/bin
+          echo "$(pwd)/bin" >> $GITHUB_PATH
           mdbook build
 
       - uses: JamesIves/github-pages-deploy-action@4.1.7
