--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -63,7 +63,8 @@ jobs:
       #    git add .cargo
       #    git commit -am'add cargo crate'
       - run: sudo apt-get update
-      - run: sudo apt-get -y install plantuml
+      - run: sudo apt-get -y install graphviz
+      - run: sh scripts/install_plantuml.sh
       - run: echo "$(pwd)/bin" >> $GITHUB_PATH
       - run: mdbook build
 
