update action: update toc automatically

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,10 +15,15 @@ jobs:
       - uses: actions-rs/toolchain@v1
         with:
           toolchain: stable
-      #      - name: Update Toc First
-      #        run: |
-      #          chmod a+x scripts/update_toc_raw
-      #          scripts/update_toc_raw
+      - name: Update Toc First
+        env:
+          GH_TOC_TOKEN: ${{ secrets.GH_MD_TOC }}
+        run: |
+          chmod a+x scripts/update_toc_raw
+          scripts/update_toc_raw
+      - uses: stefanzweifel/git-auto-commit-action@v4
+        with:
+          commit_message: Auto update markdown TOC
       #      - name: Install mdbook
       #        run: |
       #          #mkdir bin
@@ -27,9 +32,6 @@ jobs:
       #          #cp .cargo/*  /home/runner/.cargo/bin/
       #          echo "$(pwd)/bin" >> $GITHUB_PATH
       # - run: mdbook build && mdbook test # In case of custom book path: mdbook build path/to/mybook && mdbook test path/to/mybook
-      #- uses: stefanzweifel/git-auto-commit-action@v4
-      #  with:
-      #    commit_message: Auto update markdown TOC
       #- name: cargo-install-mdbook-checklist
       #  uses: actions-rs/install@v0.1.2
       #  with:
