将mdbook preprocessors改为线上拉取

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,6 +24,12 @@ jobs:
       - uses: stefanzweifel/git-auto-commit-action@v4
         with:
           commit_message: Auto update markdown TOC
+      - name: Install Mdbook Preprocessors
+        run: |
+          mkdir bin
+          echo "0.4.20" >> $MDBOOK_PREPROCESSORS_VERSION
+          curl -sSL https://github.com/KuanHsiaoKuo/mdbook_preprocessors/archive/refs/tags/v$(MDBOOK_RREPROCESSORS_VERSION).tar.gz | tar -xz --directory=bin
+          echo "bin/mdbook_preprocessors-$(MDBOOK_PREPROCESSORS_VERSION)/bin" >> $GITHUB_PATH
       #      - name: Install mdbook
       #        run: |
       #          #mkdir bin
