add ddd part, expand to quantitative trading and web3

--- a/book.toml
+++ b/book.toml
@@ -30,8 +30,8 @@ editable = true
 copy-js = true
 
 [output.html.fold]
-enable = false
-level = 0
+enable = true
+level = 1
 
 # Enables the `mdbook-mermaid` preprocessor
 [preprocessor.mermaid]
